--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '3.1.5'
-	id 'io.spring.dependency-management' version '1.1.3'
+	id 'org.springframework.boot' version '3.1.1'
+	id 'io.spring.dependency-management' version '1.1.0'
 }
 
 group = 'docks.api'
@@ -25,6 +25,13 @@ dependencies {
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
+
+tasks.jar {
+	manifest {
+		attributes["Main-Class"] = "docks.restfulapi.Application"
+	}
+}
+
 
 tasks.named('test') {
 	useJUnitPlatform()
